--- a/apps/native/package.json
+++ b/apps/native/package.json
@@ -34,6 +34,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-css-interop": "0.2.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
@@ -43,7 +44,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
+    "@babel/plugin-transform-react-jsx": "^7.26.0",
     "@types/react": "~19.1.10",
+    "babel-preset-expo": "^11.0.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2"
   },
