--- a/apps/server/openapi.yaml
+++ b/apps/server/openapi.yaml
@@ -211,15 +211,26 @@ paths:
       tags: [Professionals]
       summary: Lista profissionais com filtros básicos.
       operationId: listProfessionals
-      x-roles: [admin]
+      x-roles: [admin, professional]
       parameters:
         - in: query
           name: q
           schema:
             type: string
           description: Busca por nome, e-mail ou documento.
+        - in: query
+          name: status
+          schema:
+            type: string
+            enum: [active, inactive]
+          description: Filtra resultados por status de atividade.
         - $ref: '#/components/parameters/Limit'
         - $ref: '#/components/parameters/Offset'
+        - in: query
+          name: includeSummary
+          schema:
+            type: boolean
+          description: Define se a resposta deve incluir contagem agregada por status.
       responses:
         '200':
           description: Lista paginada de profissionais.
@@ -227,6 +238,51 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/PaginatedUsers'
+        default:
+          $ref: '#/components/responses/Error'
+  /professionals/me:
+    get:
+      tags: [Professionals]
+      summary: Perfil do profissional autenticado.
+      operationId: getMyProfessionalProfile
+      x-roles: [professional, admin]
+      responses:
+        '200':
+          description: Perfil recuperado com sucesso.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/User'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        default:
+          $ref: '#/components/responses/Error'
+  /professionals/onboarding:
+    post:
+      tags: [Professionals]
+      summary: Completa o cadastro do profissional autoatendido.
+      description: Permite que profissionais recém-cadastrados informem dados obrigatórios para acessar o gerenciador.
+      operationId: completeProfessionalOnboarding
+      x-roles: [professional, admin]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProfessionalOnboardingRequest'
+      responses:
+        '200':
+          description: Perfil profissional atualizado.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProfessionalOnboardingResponse'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '409':
+          $ref: '#/components/responses/Conflict'
         default:
           $ref: '#/components/responses/Error'
   /professionals/{id}:
@@ -1119,6 +1175,19 @@ components:
         offset:
           type: integer
           format: int32
+        statusCounts:
+          type: object
+          description: Quantidade total de registros segmentada por status.
+          properties:
+            total:
+              type: integer
+              format: int32
+            active:
+              type: integer
+              format: int32
+            inactive:
+              type: integer
+              format: int32
     User:
       type: object
       required:
@@ -1181,6 +1250,36 @@ components:
     ProfessionalUpdateInput:
       allOf:
         - $ref: '#/components/schemas/ProfessionalCreateInput'
+    ProfessionalOnboardingRequest:
+      type: object
+      required: [fullName, documentId, specialty]
+      properties:
+        fullName:
+          type: string
+        documentId:
+          type: string
+          description: CPF do profissional (somente dígitos).
+        specialty:
+          type: string
+        phone:
+          type: string
+          nullable: true
+          description: Telefone de contato com DDD.
+    ProfessionalOnboardingResponse:
+      type: object
+      required: [status, userId, roles]
+      properties:
+        status:
+          type: string
+          enum: [created, updated]
+        userId:
+          type: integer
+          format: int64
+        roles:
+          type: array
+          items:
+            type: string
+            enum: [admin, professional]
     PatientStage:
       type: string
       enum: [pre_triage, in_treatment, post_treatment]
