--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "build": "tsdown",
     "check-types": "tsc -b",
-  "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
-  "dev": "bun run --hot src/index.ts",
-  "start": "bun run dist/index.js",
-  "test": "vitest --run",
+    "compile": "bun build --compile --minify --sourcemap --bytecode ./src/index.ts --outfile server",
+    "dev": "bun run --hot src/index.ts",
+    "start": "bun run dist/index.js",
+    "test": "vitest --run",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
@@ -24,12 +24,14 @@
     "dotenv": "^17.2.1",
     "zod": "^4.0.2",
     "hono": "^4.8.2",
-  "drizzle-orm": "^0.44.2",
-  "mysql2": "^3.14.0",
-  "better-auth": "^1.3.13",
-  "@better-auth/expo": "^1.3.13",
-  "jose": "^5.2.3",
-  "date-fns": "^3.6.0"
+    "drizzle-orm": "^0.44.2",
+    "mysql2": "^3.14.0",
+    "better-auth": "^1.3.13",
+    "@better-auth/expo": "^1.3.13",
+    "jose": "^5.2.3",
+    "date-fns": "^3.6.0",
+    "xlsx": "^0.18.5",
+    "resend": "^3.5.0"
   },
   "devDependencies": {
     "tsdown": "^0.15.1",
