--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,10 +13,10 @@
     "db:studio": "drizzle-kit studio",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:start": "docker compose up -d",
-    "db:watch": "docker compose up",
-    "db:stop": "docker compose stop",
-    "db:down": "docker compose down",
+    "db:start": "powershell -ExecutionPolicy Bypass -File ./db-start.ps1",
+    "db:watch": "cmd /c \"docker compose up\"",
+    "db:stop": "cmd /c \"docker compose stop\"",
+    "db:down": "cmd /c \"docker compose down\"",
     "db:seed": "bun run src/db/seed.ts",
     "grant-role": "bun run scripts/grant-role.ts"
   },
